<resources>
    <string name="app_name">Instagram</string>
    <string name="edit_profile">Edit profile</string>
    <string name="create_account">Don\'t have an account? <b>Sign up.</b></string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="more_image">More image</string>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>
    <string name="back_image">Back image</string>
    <string name="enter_a_caption_here">Enter a caption here ...</string>
    <string name="image">image</string>
    <string name="share_image">Share image</string>
    <string name="icon_image">icon_image</string>
    <string name="post_image">Post image</string>
    <string name="likes_image">Likes image</string>
    <string name="comment_image">Comment image</string>
</resources>
