<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user_photo_image"
        style="@style/icon"
        android:contentDescription="@string/icon_image"
        android:src="@drawable/person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Will Smith"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/user_photo_image"
        app:layout_constraintStart_toEndOf="@id/user_photo_image"
        app:layout_constraintTop_toTopOf="@id/user_photo_image" />

    <ImageView
        android:id="@+id/more_image"
        style="@style/icon"
        android:contentDescription="@string/more_image"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@id/user_photo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_photo_image" />

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/post_image"
        android:scaleType="centerCrop"
        android:src="@drawable/image_placeholder"
        app:layout_constraintBottom_toTopOf="@id/like_image"
        app:layout_constraintTop_toBottomOf="@id/user_photo_image" />

    <ImageView
        android:id="@+id/like_image"
        style="@style/icon"
        android:contentDescription="@string/likes_image"
        android:src="@drawable/ic_likes_border"
        app:layout_constraintBottom_toTopOf="@id/likes_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_image" />

    <ImageView
        android:id="@+id/comment_image"
        style="@style/icon"
        android:contentDescription="@string/comment_image"
        android:src="@drawable/ic_comments_border"
        app:layout_constraintBottom_toBottomOf="@id/like_image"
        app:layout_constraintStart_toEndOf="@id/like_image"
        app:layout_constraintTop_toTopOf="@id/like_image" />

    <ImageView
        android:id="@+id/share_image"
        style="@style/icon"
        android:contentDescription="@string/share_image"
        android:src="@drawable/ic_share_border"
        app:layout_constraintBottom_toBottomOf="@id/like_image"
        app:layout_constraintStart_toEndOf="@id/comment_image"
        app:layout_constraintTop_toTopOf="@id/like_image" />

    <TextView
        android:id="@+id/likes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="828,123 likes"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/caption_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/like_image" />

    <TextView
        android:id="@+id/caption_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="willsmith This is a caption for the post. It's actually a very long caption."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/likes_text"
        app:layout_constraintTop_toBottomOf="@id/likes_text" />

</androidx.constraintlayout.widget.ConstraintLayout>